<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    android:focusable="true" android:focusableInTouchMode="true"
    android:weightSum="1" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView android:text="@string/location" >
            </TextView>
        </TableRow>

        <AutoCompleteTextView
            android:id="@+id/editText2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:singleLine="true" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rate" >
        </TextView>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RatingBar
                android:id="@+id/ratingBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </RatingBar>
        </TableRow>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sail" >
        </TextView>

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true" >
        </Spinner>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board" >
        </TextView>

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true" >
        </Spinner>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind" >
        </TextView>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/spinner3"
                android:layout_width="20dp"
                android:layout_height="fill_parent"
                android:layout_weight="20"
                android:ems="2"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                 />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="100dp"
                android:layout_height="fill_parent"
                android:inputType="number"
                android:maxLength="2"
                android:numeric="integer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/knots"
                android:textSize="40dp" />
        </TableRow>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment" >
        </TextView>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text" >

            <requestFocus>
            </requestFocus>
        </EditText>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera" >
        </Button>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share" >
        </Button>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store" >
        </Button>
    </TableLayout>

</ScrollView>